scripts/vm/common/service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: {SVC_NAME}
  namespace: {SVC_NAMESPACE}
spec:
  ports:
  - name: grpc
    port: {SVC_PORT}
    protocol: TCP
    targetPort: {SVC_PORT}
  type: ClusterIP
