scripts/vm/common/service-entry.tpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: {SVC_NAME}
  namespace: {SVC_NAMESPACE}
spec:
  hosts:
  - {SVC_NAME}.{SVC_NAMESPACE}.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: {SVC_PORT}
    name: grpc
    protocol: GRPC
  resolution: STATIC
  endpoints:
  - address: {GCE_IP}
    ports:
      grpc: {SVC_PORT}
    labels:
      app: {SVC_NAME}
